# fast-verlet

./: CMakeLists.txt  compile_commands.json
src/: common.h  main.c  sim.c  sim.h  verlet.c  verlet.h
